--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "spotify-web-api-js": "^1.5.2",
     "swiper": "^11.0.5",
     "web-vitals": "^3.1.1"
   },
